add search API work correctly